<resources>
    <string name="app_name">CarService</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_appointments">Appointments</string>
    <string name="title_services">Services</string>
    <string name="text_email">Email</string>
    <string name="type_your_email">Type your Email</string>
    <string name="text_password">Password</string>
    <string name="type_your_password">Type your Password</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="text_log_in">Login</string>
    <string name="text_register">Register</string>
    <string name="text_already_have_an_account_log_in">Already have an account? Login</string>
    <string name="text_send_otp">Send OTP</string>
    <string name="text_show_password_box">Show Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_type_new_password">Type new Password</string>
    <string name="text_welcome_app">Welcome to CarService</string>
    <string name="back_button">Back</string>
    <string name="text_email_recovery">Email Recovery</string>
    <string name="text_send_code">Send Code</string>
    <string name="text_user_profile">User Profile</string>
    <string name="text_user_profile_image">Profile Image</string>
    <string name="text_username">Username</string>
    <string name="text_vehicle_detail">Vehicle Detail</string>
    <string name="vehicle_icon">Vehicle Icon</string>
    <string name="title_car">Your car name</string>
    <string name="title_plate">Your car plate number</string>
    <string name="arrow_icon">Arrow Icon</string>
    <string name="text_add_vehicle">Add Vehicle</string>
    <string name="title_account_setting">Account Setting</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_save">Save</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_license_plate">Enter License Plate</string>
    <string name="title_license_plate">License Plate</string>
    <string name="text_enter_year">Enter Year</string>
    <string name="title_year">Year</string>
    <string name="text_enter_model">Enter Model</string>
    <string name="title_model">Model</string>
    <string name="text_enter_brand">Enter Brand</string>
    <string name="title_brand">Brand</string>
    <string name="title_vehicle">Vehicle Information</string>
    <string name="title_username">Username</string>
    <string name="text_enter_your_username">Your Username</string>
    <string name="title_email_address">Email Address</string>
    <string name="text_enter_your_email_address">Your Email Address</string>
    <string name="title_save">Save</string>
    <string name="title_cancel">Cancel</string>
    <string name="text_reenter">Re-enter your new password</string>
    <string name="text_confirm_new_password">Confirm New Password</string>
    <string name="text_enter_your_new_password">Enter your new password</string>
    <string name="title_new_password">New Password</string>
    <string name="text_enter_your_current_password">Enter your current password</string>
    <string name="text_current_password">Current Password</string>
    <string name="text_logout">Logout</string>
    <string name="text_enter_number">Enter Plate Number</string>
    <string name="text_update_vehicle">Update Vehicle</string>
    <string name="text_car_model">Car Model</string>
    <string name="text_license_plate_number">License Plate Number</string>"
    <string name="unknown_model">Unknown Model</string>
    <string name="unknown_plate">Unknown Plate</string>
    <string name="title_our_services">Our Services</string>
    <string name="title_category">Category</string>
    <string name="title_maintenance">Maintenance</string>
    <string name="title_repair">Repair</string>
    <string name="title_inspection">Inspection</string>
    <string name="title_maintenance_services">Maintenance Services</string>
    <string name="title_repair_services">Repair Services</string>
    <string name="title_inspections_services">Inspections Services</string>
    <string name="text_service_name">Service Name</string>
    <string name="title_service_icon">Service Icon</string>
    <string name="text_description">Service Description</string>
    <string name="text_price">Price</string>
    <string name="text_delete">Delete</string>
    <string name="title_continue">Continue</string>
    <string name="text_duration">Duration</string>
    <string name="text_type_you_username">Type you Username</string>
    <string name="text_available_dates_and_times">Available Dates and Times</string>
    <string name="text_selected_date_time"><![CDATA[Selected Date & Time]]></string>
    <string name="text_vehicle_details">Vehicle Details</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_date_time"><![CDATA[Date & Time]]></string>
    <string name="title_service_detail">Service Detail</string>
    <string name="title_booking_confirmation">Booking Confirmation</string>
    <string name="title_booking_success">Booking Success</string>
    <string name="title_update_vehicle">Update Vehicle</string>
    <string name="title_add_vehicle">Add Vehicle</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_service_name">Service Name</string>
    <string name="text_minutes">Minutes</string>
    <string name="text_vehicle">Vehicle</string>
    <string name="text_select_vehicle">Select Vehicle</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_cimb">CIMB</string>
    <string name="text_tng">TnG</string>
    <string name="text_pay_on_arrival">Pay on Arrival</string>
    <string name="text_book_another_service">Book Another Service</string>
    <string name="text_view_booking_details">View Booking Details</string>
    <string name="text_date_and_time">Date and Time</string>
    <string name="text_booked_by">Booked by:</string>
    <string name="text_upcoming_appointments">Upcoming Appointments</string>
    <string name="title_service_upcoming_detail">Service Upcoming Detail</string>
    <string name="text_booking_id">Booking ID:</string>
    <string name="text_service_upcoming_name">Service Name:</string>
    <string name="text_selected_date">Selected Date:</string>
    <string name="text_selected_time">Selected Time:</string>
    <string name="text_selected_vehicle">Vehicle:</string>
    <string name="text_selected_duration">Duration:</string>
    <string name="text_selected_price">Price:</string>
    <string name="text_selected_payment_method">Payment Method:</string>
    <string name="return_to_home">Return to Home</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="text_rm">RM</string>
    <string name="title_appointment_detail">Appointment Detail</string>
    <string name="title_history_detail">History Detail</string>
    <string name="label_cancel">Cancel Booking</string>
    <string name="text_service_name_cancel">Service Name:</string>
    <string name="text_service_date">Service Date:</string>
    <string name="text_service_time">Service Time:</string>
    <string name="label_cancel_success">Cancel Booking Success</string>
</resources>