<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvServiceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_service_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_booked_by"
            android:paddingTop="8dp"
            android:textColor="@color/black"/>

        <!-- Price -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/tvPriceLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_price"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvServicePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="end" />
        </LinearLayout>

        <!-- Duration -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/tvDurationLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_duration"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvServiceDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="end" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_minutes"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="4dp" />
        </LinearLayout>

        <!-- Duration -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/tvDateAndTimeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_date_and_time"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvSelectedDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="end" />
        </LinearLayout>

        <!-- Duration -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_vehicle_details"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvVehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="end" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSelectVehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_select_vehicle"
            android:layout_marginTop="16dp"/>

        <!-- Payment Method -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_payment_method"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="16dp" />

        <RadioGroup
            android:id="@+id/radioGroupPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/rbCIMB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cimb"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/rbTnG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_tng"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/rbCOD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pay_on_arrival"
                android:textColor="@color/black"/>
        </RadioGroup>

        <!-- Action Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_cancel"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/text_confirm" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
