<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp">

    <!-- Logo Text -->
    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="36sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLogo"
        android:layout_marginTop="32dp"
        android:hint="@string/type_your_email"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@android:color/holo_blue_dark"
        style="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingVertical="12dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailLayout"
        android:layout_marginTop="16dp"
        android:hint="@string/type_your_password"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@android:color/holo_blue_dark"
        style="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingVertical="12dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Forgot Password Section -->
    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/passwordLayout"
        android:layout_marginTop="20dp"
        android:text="@string/title_forgot_password"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvForgotPassword"
        android:layout_marginTop="20dp"
        android:text="@string/text_log_in" />

    <!-- Register Prompt -->
    <TextView
        android:id="@+id/tvRegisterPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#595959"
        android:textSize="14sp" />

    <!-- Register Button -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/text_register"
        android:textColor="#FFFFFF" />

</RelativeLayout>
