<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingVertical="8dp">

    <ImageView
        android:id="@+id/serviceIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_wrench"
        android:contentDescription="@string/title_service_icon"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/serviceName"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/text_service_name"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_gravity="top" />

        <TextView
            android:id="@+id/serviceDescription"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/text_description"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_gravity="bottom" />
    </LinearLayout>

    <TextView
        android:id="@+id/servicePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_price"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_gravity="center_vertical" />
</LinearLayout>
