<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp">

    <!-- Back Button -->
    <ImageView
        android:id="@+id/ivBackButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:contentDescription="@string/back_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp" />

    <!-- Title -->
    <TextView
        android:id="@+id/tvForgetPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_forgot_password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@id/ivBackButton"/>

    <!-- Subtitle -->
    <TextView
        android:id="@+id/tvEmailRecoverySubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email_recovery"
        android:textSize="16sp"
        android:textColor="#595959"
        android:layout_below="@id/tvForgetPasswordTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />

    <!-- Input: Email Address -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recoveryEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEmailRecoverySubtitle"
        android:layout_marginTop="32dp"
        android:hint="@string/type_your_email"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@android:color/holo_blue_dark"
        style="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRecoveryEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:paddingVertical="12dp"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Button: Send Code -->
    <Button
        android:id="@+id/btnSendCode"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/text_send_code"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp" />
</RelativeLayout>
